tests/compile-fail/input_struct_incompatibles.stderr
error: `return_ref` option not allowed here
 --> tests/compile-fail/input_struct_incompatibles.rs:1:16
  |
1 | #[salsa::input(return_ref)]
  |                ^^^^^^^^^^

error: `specify` option not allowed here
 --> tests/compile-fail/input_struct_incompatibles.rs:4:16
  |
4 | #[salsa::input(specify)]
  |                ^^^^^^^

error: `no_eq` option not allowed here
 --> tests/compile-fail/input_struct_incompatibles.rs:7:16
  |
7 | #[salsa::input(no_eq)]
  |                ^^^^^

error: `db` option not allowed here
  --> tests/compile-fail/input_struct_incompatibles.rs:10:16
   |
10 | #[salsa::input(db = Db)]
   |                ^^

error: unrecognized option `recover_fn`
  --> tests/compile-fail/input_struct_incompatibles.rs:13:16
   |
13 | #[salsa::input(recover_fn = recover)]
   |                ^^^^^^^^^^

error: `lru` option not allowed here
  --> tests/compile-fail/input_struct_incompatibles.rs:16:16
   |
16 | #[salsa::input(lru =12)]
   |                ^^^

error: `#[id]` cannot be used with `#[salsa::input]`
  --> tests/compile-fail/input_struct_incompatibles.rs:21:5
   |
21 | /     #[id]
22 | |     field: u32,
   | |______________^
